bug fix with users not showing up

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -7655,7 +7655,7 @@ button.close {
 }
 
 .page-content {
-  background: url("/app/images/small_steps.png") repeat;
+  background: url("../images/small_steps.png") repeat;
   height: 100vh;
   padding: 0;
 }
